--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:#1C1C1C;
+    background-color: white;
 }
 
 .texto-principal {
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-    color: #D3D3D3;
+    color: #050000;
     text-align: center;
 }
 h2 {
