--- a/style.css
+++ b/style.css
@@ -5,10 +5,21 @@ body {
 header{
     
 }
+nav {
+    display: inline-block;
+}
 
 nav li {
     display: inline;
-    margin: 5px;
+    margin: 10px;
+}
+
+nav a {
+    text-transform: uppercase;
+    color:blue;
+    font-weight: bold;
+    font-size: 20px;
+    text-decoration: none;
 }
 
 #logo{
