--- a/style.css
+++ b/style.css
@@ -3,8 +3,15 @@ body {
 }
 
 header{
-    
+    padding: 20px 0;
 }
+
+.caixa-nav{
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+
 nav {
     display: inline-block;
     position: absolute;
