--- a/style.css
+++ b/style.css
@@ -71,3 +71,9 @@ p {
 	color:  #5F9EA0;
 	text-decoration: underline;
 }
+
+.rodape { color:aliceblue;
+    text-align: center;
+    background-color: black;
+    padding: 20px;
+}
